--- a/src/support_tree/overview.css
+++ b/src/support_tree/overview.css
@@ -1,20 +1,11 @@
 .react-flow__node-custom {
-    font-size: 10px;
-    width: 180px;
+    font-size: 12px;
+    max-width: 160px;
     background: #f5f5f6;
     color: #222;
     border-color: #a19891;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 15%), 0 2px 4px -1px rgb(0 0 0 / 8%);
     border-radius: 2px;
-  }
-  
-  .react-flow__node-custom .react-flow__handle {
-    top: 24px;
-    right: -15px;
-    width: 6px;
-    height: 10px;
-    border-radius: 2px;
-    background-color: #778899;
   }
   
   .react-flow__node.circle {
@@ -35,10 +26,6 @@
     line-height: 1.4;
     width: 225px;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 15%), 0 2px 4px -1px rgb(0 0 0 / 8%);
-  }
-  
-  .react-flow__node.annotation .react-flow__handle {
-    display: none;
   }
   
   .custom-node__header {
